
TODO:
	LanBridgeServer:
		system commands
			client restart callback at begin
			discard session
			password
	LanBridgeMessenger: system command, password.



2017.6.6	K.L.	<k.l.lambda@gmail.com>

	*	TcpBridge example:
			LanBridge --usage=client --port=8102 --catcher=TCP --pitcher=TCP --tcp_server_port=9001
			LanBridge --usage=server --catcher=TCP --pitcher=TCP  --tcp_client_host=localhost --tcp_client_port=9001

	+	TcpBridgeCatcher: implemented.

	*!	io_service dead may result in socket end.

	>	TcpBridge: merged TcpClientBridge and TcpServerBridge.

	+	TcpServerBridgePitcher: implemented.


2017.6.5	K.L.	<k.l.lambda@gmail.com>

	+	TcpBridge/TcpClient: send password.

	+	TcpBridge: TcpClient added.
	+	TcpBridge: TcpServer added.


2017.6.4	K.L.	<k.l.lambda@gmail.com>

	+	TcpBridge: projects setup.


2014.6.5	K.L.	<k.l.lambda@gmail.com>

	>	src\BridgeServer.cpp: fixed host map index error.


2012.9.8	K.L.	<k.l.lambda@gmail.com>

	|	Upgraded for VC10.


2012.8.20	K.L.	<k.l.lambda@gmail.com>

	>	Updated for VC10.


2012.1.6	K.L.	<k.l.lambda@gmail.com>

	>	src/BridgeServer.cpp: refined 'CONNECT' command.


2011.12.8	K.L.	<k.l.lambda@gmail.com>

	+	src/BridgeServer.cpp: translateHeaders added.

	*!	HTTP 404 error on some host is due to URL contains host name in start line, while the web server suppose that should not do.


2011.12.7	K.L.	<k.l.lambda@gmail.com>

	>	Remove mutex locks on console log.


2011.11.24	K.L.	<k.l.lambda@gmail.com>

	+	MemoryBridge: project setup.

	+	LanBridge: project setup.


2011.4.20	K.L.	<k.l.lambda@gmail.com>

	>	WindowPoser: added parameter 'class'.


2010.11.26	K.L.	<k.l.lambda@gmail.com>

	+	VideoBridge: added frame position parameters.


2010.11.19	K.L.	<k.l.lambda@gmail.com>

	+	WindowPoser: project setup.


2010.11.16	K.L.	<k.l.lambda@gmail.com>

	+	LanBridgeServer: host map added.

	+	include/Log.h: created.


2010.11.15	K.L.	<k.l.lambda@gmail.com>

	+	Catcher: 'new connection avoid' mark added.
