@@ -24,6 +24,7 @@ int main(int argc, char* argv[])
 	po::options_description desc("Allowed options");
 	desc.add_options()
 		("usage",		po::value<std::string>())
+		("log_level",	po::value<unsigned long>())
 	;
 
 	try
@@ -31,6 +32,11 @@ int main(int argc, char* argv[])
 		po::variables_map vm;
 		po::store(po::command_line_parser(argc, argv).options(desc).allow_unregistered().run(), vm);
 		po::notify(vm);
+
+		if(vm.count("log_level"))
+		{
+			Log::getInstance().setConsoleMask(Log::LoggingMask(vm["log_level"].as<unsigned long>()));
+		}
 
 		const std::string usage = vm.count("usage") ? vm["usage"].as<std::string>() : "station";
 
